Fixed filter spacing on desktop

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -59,7 +59,7 @@ dialog:-internal-dialog-in-top-layer::backdrop {
     height: 42px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     background: rgb(255,171,243);
     background: linear-gradient(90deg, rgba(255,171,243,1) 0%, rgba(30,26,29,1) 100%);
     box-sizing: border-box;
@@ -129,5 +129,9 @@ dialog:-internal-dialog-in-top-layer::backdrop {
         width: 100vw;
         flex-basis: 100%;
         overflow-x: clip;
+    }
+
+    .sort {
+        justify-content: space-between;
     }
 }
